# YellowWatcher

./: CMakeLists.txt  README.md  main.cpp
agregator/: CMakeLists.txt  agregator.cpp  agregator.h
directory_watcher/: CMakeLists.txt  directory_watcher.cpp  directory_watcher.h
logger/: CMakeLists.txt  logger.cpp  logger.h
parser/: CMakeLists.txt  parser.cpp  parser.h
program_options/: CMakeLists.txt
reader/: CMakeLists.txt  reader.cpp  reader.h
sender/: CMakeLists.txt  sender.cpp  sender.h
settings/: CMakeLists.txt  settings.cpp  settings.h
